Details to make it run in an IDE